<resources>
    <string name="app_name">JP\'s Lab</string>
    <!-- IN OUT PAGE -->
    <string name="btnIn_name">Entrada</string>
    <string name="btnOut_name">Salida</string>
    <!-- PAD PAGE -->
    <string name="rutInputPlaceholder">Escribe tu RUT</string>
    <string name="pad1">1</string>
    <string name="pad2">2</string>
    <string name="pad3">3</string>
    <string name="pad4">4</string>
    <string name="pad5">5</string>
    <string name="pad6">6</string>
    <string name="pad7">7</string>
    <string name="pad8">8</string>
    <string name="pad9">9</string>
    <string name="pad0">0</string>
    <string name="padSeparator">-</string>
    <string name="padK">K</string>
</resources>